# synckit

./: .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  package.json
.github/workflows/: benchmarks.yml  ci.yml
core/: Cargo.toml
core/benches/: delta_bench.rs  vector_clock_bench.rs
core/src/: document.rs  error.rs  lib.rs
core/src/crdt/: fractional_index.rs  mod.rs  or_set.rs
core/src/crdt/text/: mod.rs  text.rs
core/src/protocol/: delta.rs  mod.rs
core/src/storage/: mod.rs
core/src/sync/: delta.rs  lww.rs  mod.rs  vector_clock.rs
core/src/wasm/: bindings.rs
core/tests/: property_tests.rs
docs/api/: NETWORK_API.md  SDK_API.md
docs/guides/: choosing-variant.md  performance.md
examples/project-management/src/: App.tsx  store.ts
examples/project-management/src/components/: KanbanBoard.tsx  TaskModal.tsx
examples/vanilla-counter/: index.html
protocol/tla/: README.md  convergence.cfg  lww_merge.cfg  lww_merge.tla  run-all-checks.ps1  vector_clock.cfg
sdk/: PERFORMANCE.md  README.md
sdk/src/: document.ts
sdk/src/sync/: manager.ts
server/typescript/: .env.example  package.json
